Dreambox ReStream Change Log - http://theyosh.nl/projects/dreambox-restream -
dreambox@theyosh.nl - ©2006 - 2017

version 2.4.0 (30-04-2017)
 * Removed all old flash players and replaced with hls.js player. (https://github.com/video-dev/hls.js)
 * Fixed a caching bug after upgrading. The cache is now cleaned by force. Thanks to Marco Molinari
 * Fixed an issue with playing recordings from the Dreambox when the authentication is enabled on the Dreambox. Thanks to Marco Molinari
 * Changed recording to HD streams, in order to get the transcoding more stable. Thanks to Marco Molinari
 * Added a new link in the About page to the setup page. It is below the CHANGELOG link in the Desktop interface.
 * Added a new option in the options menu in the mobile interface to force a cache purge.
 * Added a new link in the About page to the purge command. It is below the CHANGELOG link
 * Added a new setting: '$bouqetsFilter' for filtering bouquets that should be loaded by DreamboxReStream
 * Added a new setting: ‘Additional buffer time in seconds’. This setting will at extra buffer time to the stream. Increase this value when the stream is not smooth.
 * Updated the setup page. Now it is nicely centred
 * Updated jQuery to version 3.2.1 (https://jquery.com/)
 * Updated humanize-duration to version 3.10.0 (https://github.com/EvanHahn/HumanizeDuration.js)
 * Updated Add to home screen to version 3.2.3 (https://github.com/cubiq/add-to-homescreen)
 * Updated jQuery.ScrollTo to version 2.1.2 (https://github.com/flesler/jquery.scrollTo)
 * Updated jQuery UI to version 1.12.1 (https://jqueryui.com/)

version 2.3.7 (12-04-2015)
* Fixed web url parsing in EPG text.
* Fixed Enigma1 issue.
* Fixed issue with subtitling when none selected. Now subtitles are not shown when not selected.
* Updated debug code to hide the DM password for the webinterface
* Updated jQuery to version 2.1.3 (http://jquery.com/)
* Updated jQuery UI to version 1.11.4 (http://jqueryui.com/)